--- a/reportes/index.html
+++ b/reportes/index.html
@@ -2,11 +2,21 @@
 <html>
 <head>
 <title>Reporte del Sistema</title>
+<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 <h1>Listado de Clientes en el Sistema</h1>
 <br>
-Nombre: cliente 1 edad: 22
-Nombre: Cliente 2 edad: 22
+<table border = 1>
+<tr>
+<td>NIT</td> <td>Nombre</td> <td>Edad</td> <td>Genéro</td>
+</tr>
+<tr>
+<td>150</td><td>cliente 1</td><td>22</td><td>M</tdadmin>
+</tr>
+<tr>
+<td>250</td><td>Cliente 2</td><td>22</td><td>F</tdadmin>
+</tr>
+</table>
 </body>
 </html>
