--- a/reportes/index.html
+++ b/reportes/index.html
@@ -12,10 +12,28 @@
 <td>NIT</td> <td>Nombre</td> <td>Edad</td> <td>Genéro</td>
 </tr>
 <tr>
-<td>150</td><td>cliente 1</td><td>22</td><td>M</tdadmin>
+<td>150</td><td>Cliente 1</td><td>22</td><td>M</tdadmin>
 </tr>
 <tr>
 <td>250</td><td>Cliente 2</td><td>22</td><td>F</tdadmin>
+</tr>
+<tr>
+<td>100</td><td>Luis Paz</td><td>25</td><td>M</tdadmin>
+</tr>
+<tr>
+<td>111</td><td>Marco Aurelio</td><td>25</td><td>M</tdadmin>
+</tr>
+<tr>
+<td>360</td><td>Ana Estrada</td><td>28</td><td>F</tdadmin>
+</tr>
+<tr>
+<td>820</td><td>Luigi Bros</td><td>31</td><td>M</tdadmin>
+</tr>
+<tr>
+<td>250</td><td>Mario Herrera</td><td>32</td><td>M</tdadmin>
+</tr>
+<tr>
+<td>740</td><td>Mario Bros</td><td>50</td><td>M</tdadmin>
 </tr>
 </table>
 </body>
