--- a/reportesproductos/index.html
+++ b/reportesproductos/index.html
@@ -9,13 +9,43 @@
 <br>
 <table border = 1>
 <tr>
-<td>NIT</td> <td>Nombre</td> <td>Precio</td> <td>Cantidad</td>
+<td>Nombre</td> <td>Precio</td> <td>Cantidad</td>
 </tr>
 <tr>
 <td>Producto 1</td><td>10.0</td><td>1</td><td>
 </tr>
 <tr>
 <td>Prodcuto 2</td><td>35.0</td><td>3</td><td>
+</tr>
+<tr>
+<td>Batidora</td><td>200.0</td><td>10</td><td>
+</tr>
+<tr>
+<td>Horno</td><td>350.0</td><td>5</td><td>
+</tr>
+<tr>
+<td>Licuadora</td><td>400.0</td><td>4</td><td>
+</tr>
+<tr>
+<td>Microondas</td><td>600.0</td><td>7</td><td>
+</tr>
+<tr>
+<td>Cama</td><td>1000.0</td><td>9</td><td>
+</tr>
+<tr>
+<td>Lavadora</td><td>1500.0</td><td>2</td><td>
+</tr>
+<tr>
+<td>Secadora</td><td>2500.0</td><td>1</td><td>
+</tr>
+<tr>
+<td>Estufa</td><td>3000.0</td><td>6</td><td>
+</tr>
+<tr>
+<td>Television</td><td>4500.0</td><td>8</td><td>
+</tr>
+<tr>
+<td>Refrigerador</td><td>6500.0</td><td>3</td><td>
 </tr>
 </table>
 </body>
